# SOSD

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.cc  benchmark.h  config.h  downsample.py  downsample_50.py  gen_norm.py  gen_uniform.py  generate.cc  reproduce.sh  util.h
competitors/stx-btree-0.9/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
competitors/stx-btree-0.9/doxygen-html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00024.html  a00024_source.html  a00025.html  a00026.html  a00026_source.html  a00027.html  a00027_source.html  a00028.html  a00028_source.html  a00029.html  a00029_source.html  a00030.html  a00030_source.html  a00031.html  a00031_source.html  a00032.html  a00032_source.html  a00033.html  (+79 more)
competitors/stx-btree-0.9/doxygen-html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_69.js  classes_6c.js  classes_6e.js  classes_72.js  classes_74.js  classes_76.js  defines_62.js  enums_72.js  enumvalues_62.js  files_62.js  functions_61.js  functions_62.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  (+44 more)
competitors/stx-btree-0.9/include/: Makefile.am  Makefile.in
competitors/stx-btree-0.9/memprofile/: Makefile.am  Makefile.in  README  main.cc  malloc_count.c  malloc_count.h  memprofile.gnuplot  memprofile.h
competitors/stx-btree-0.9/memprofile/results-2013/: memprofile-btreemap.txt  memprofile-deque.txt  memprofile-hashmap.txt  memprofile-stdmap.txt  memprofile-unorderedmap.txt  memprofile-vector.txt
competitors/stx-btree-0.9/speedtest/: Makefile.am  Makefile.in  README  speedtest-tune.cc  speedtest.cc  speedtest.gnuplot  transpose.awk
competitors/stx-btree-0.9/speedtest/results-2007/: speed-all.trt  speed-all.txt  speed-find.trt  speed-find.txt  speed-insert.trt  speed-insert.txt  speedtest.gnuplot
competitors/stx-btree-0.9/speedtest/results-2011/: speed-all.trt  speed-all.txt  speed-find.trt  speed-find.txt  speed-insert.trt  speed-insert.txt  speedtest.gnuplot
competitors/stx-btree-0.9/speedtest/results-2013/: speed-map-all.trt  speed-map-all.txt  speed-map-find.trt  speed-map-find.txt  speed-map-insert.trt  speed-map-insert.txt  speed-set-all.trt  speed-set-all.txt  speed-set-find.trt  speed-set-find.txt  speed-set-insert.trt  speed-set-insert.txt  speedtest.gnuplot
competitors/stx-btree-0.9/speedtest/results-2013-delta/: speedtest-delta.gnuplot
competitors/stx-btree-0.9/speedtest/results-2013-delta/new/: speed-map-all.txt  speed-map-find.txt  speed-map-insert.txt  speed-set-all.txt  (+2 more)
competitors/stx-btree-0.9/testsuite/: BoundTest.cc  BulkLoadTest.cc  DumpRestoreTest.cc  InstantiationTest.cc  IteratorTest.cc  LargeTest.cc  Makefile.am  Makefile.in  README  RelationTest.cc  SimpleTest.cc  StructureTest.cc  tpunit.cc  tpunit.h
competitors/stx-btree-0.9/wxbtreedemo/: Makefile.am  Makefile.in  README  WMain.cpp  WMain.h  WMain_wxg.cpp  WMain_wxg.h  WTreeDrawing.cpp  WTreeDrawing.h  manifest.xml  progicon.xcf  progicon.xpm  resources.rc  wxBTreeDemo.wxg
dtl/: CMakeLists.txt  adept.hpp  barrier.hpp  batchwise.hpp  bitmask.hpp  bitpack.hpp  bits.hpp  bitset.hpp  bitset_util.hpp  color.hpp  dict.hpp  div.hpp  dtl.hpp  env.hpp  hash.hpp  hash_fvn.hpp  index.hpp  like.hpp  lockstripe.hpp  math.hpp  mem.hpp  polyfill.hpp  psma.hpp  simd.hpp  sma.hpp  storage.hpp  thread.hpp  tree.hpp  tree_mask.hpp  zone_mask.hpp
dtl/bloomfilter/: LICENSE  README.md  block_addressing_logic.hpp  blocked_bloomfilter.hpp  blocked_bloomfilter_block_logic.hpp  blocked_bloomfilter_block_logic_sgew.hpp  blocked_bloomfilter_block_logic_sltw.hpp  blocked_bloomfilter_logic.hpp  blocked_bloomfilter_tune.hpp  blocked_bloomfilter_tune_impl.hpp  blocked_cuckoofilter.hpp  blocked_cuckoofilter_block_logic.hpp  blocked_cuckoofilter_logic.hpp  blocked_cuckoofilter_multiword_table.hpp  blocked_cuckoofilter_simd.hpp  blocked_cuckoofilter_util.hpp  blocked_cuckoofilter_word_table.hpp  bloomfilter_logic.hpp  hash_family.hpp  math.hpp  vector_helper.hpp
dtl/bloomfilter/dynamic/: block_addressing_logic.hpp  blocked_bloomfilter.hpp  blocked_bloomfilter_block_logic.hpp  blocked_bloomfilter_logic.hpp  hash.hpp
dtl/bloomfilter/old/: bloomfilter_block_logic.hpp  bloomfilter_h1.hpp  bloomfilter_h1_logic.hpp  bloomfilter_h1_mod.hpp  bloomfilter_h1_mod_vec.hpp  bloomfilter_h1_vec.hpp  bloomfilter_h2.hpp  bloomfilter_h2_logic.hpp  bloomfilter_h2_mb_logic.hpp  bloomfilter_h2_mod.hpp  bloomfilter_h2_mod_vec.hpp  bloomfilter_h2_vec.hpp  bloomfilter_h3.hpp  bloomfilter_h3_mod.hpp  bloomfilter_h3_mod_vec.hpp  bloomfilter_h3_vec.hpp  bloomfilter_hn.hpp  bloomfilter_hn_vec.hpp  bloomfilter_logic.hpp  bloomfilter_runtime.hpp  bloomfilter_runtime_sectorized.hpp
dtl/cmake/: FindNuma.cmake
dtl/old/: bitset.hpp  vec.hpp  vec2.hpp
dtl/simd/: CMakeLists.txt  bitset.hpp  extensions.hpp  intrin_avx2.hpp  intrin_avx512.hpp  intrin_sse.hpp  intrin_x64.hpp  intrinsics.hpp  types.hpp  vec.hpp  vec_readme.md
dtl/storage/: CMakeLists.txt  column.hpp  scan.hpp  types.hpp
dtl/test/: CMakeLists.txt  bitmask_experiments.cpp  bitmask_test.cpp  bitpack_test.cpp  bitset_test.cpp  bloomfilter_accuracy_combined.csv  bloomfilter_accuracy_fnv.csv  bloomfilter_accuracy_knuth.csv  bloomfilter_accuracy_murmur1.csv  bloomfilter_blocked_cacheline_test.cpp  bloomfilter_experiments.cpp  bloomfilter_rts_experiments.cpp  bloomfilter_test.cpp  cuckoofilter_test.cpp  div_test.cpp  enumerate_groups_test.cpp  false_positive_rate.csv  helper.h  knl_experiments.cpp  like_test.cpp  mem_test.cpp  probe_performance.csv  vec_test.cpp
(+130 files in other folders)
